--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
   nodered:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nodered.rule=Host(`nodered1.34.64.164.95`)"
+      - "traefik.http.routers.nodered.rule=Host(`34.64.164.95/nodered`)"
       - "traefik.http.routers.nodered.entrypoints=web"
       - "traefik.http.services.nodered.loadbalancer.server.port=1880"
     image: "cloudhack/openflownodered:1.0.87"
@@ -92,12 +92,12 @@ services:
       - saml_federation_metadata=http://web/issue/FederationMetadata/2007-06/FederationMetadata.xml
       - saml_issuer=uri:34.64.164.95
       - saml_entrypoint=http://34.64.164.95/issue
-      - saml_baseurl=http://nodered1.34.64.164.95
+      - saml_baseurl=http://34.64.164.95/nodered
       #      - saml_crt=
 
       - port=1880
       # not needed if saml_baseurl has a value
-      # - domain=34.64.164.95
+      # - domain=34.64.164.95/nodered
       # - protocol=http
       # not needed if domain has an value
       #      - nodered_domain_schema=$nodered_id$.demo1.openrpa.dk
