--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,8 @@ services:
       #      - saml_crt=
 
       - port=1880
+    ports:
+      - "1880:1880"
       # not needed if saml_baseurl has a value
       # - domain=34.64.164.95/nodered
       # - protocol=http
