--- a/docker-compose_1.yml
+++ b/docker-compose_1.yml
@@ -1,5 +1,13 @@
 version: "3.3"
 services:
+  mongodb:
+    image: "mongo"
+    #image: "mongo:3.6.16"
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
   traefik:
     image: "traefik:v2.0.0-rc3"
     container_name: "traefik"
@@ -15,10 +23,26 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
+  rabbitmq:
+    labels:
+      - "traefik.enable=true"
+      # - "traefik.http.routers.rabbitmq.rule=Host(`34.64.164.95`)"
+      - "traefik.http.routers.rabbitmq.entrypoints=web"
+      - "traefik.http.services.rabbitmq.loadbalancer.server.port=15672"
+    image: "rabbitmq:3-management"
+    container_name: "rabbitmq"
+    restart: always
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=demo2018
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   web:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`34.64.88.125`)"
+      # - "traefik.http.routers.web.rule=Host(`34.64.88.125`)"
       - "traefik.http.routers.web.entrypoints=web"
       - "traefik.frontend.passHostHeader=true"
     image: "cloudhack/openflow:1.0.87"
