--- a/docker-compose_1.yml
+++ b/docker-compose_1.yml
@@ -26,7 +26,7 @@ services:
   rabbitmq:
     labels:
       - "traefik.enable=true"
-      # - "traefik.http.routers.rabbitmq.rule=Host(`34.64.88.125`)"
+      - "traefik.http.routers.rabbitmq.rule=Host(`34.64.88.125`)"
       - "traefik.http.routers.rabbitmq.entrypoints=web"
       - "traefik.http.services.rabbitmq.loadbalancer.server.port=15672"
     image: "rabbitmq:3-management"
